# johnwiegley

./: LICENSE  Makefile  config.yaml  default.nix  publish
convert/: Convert.hs  convert.cabal  default.nix
convert/css/: custom.css  skin.css  static.css  widget.css
css/: site.css
drafts/: 2017-01-22-the-divine-worlds.md  2021-12-05-going-off-the-rails-slowly.md  TODO.org  apple.txt  capitalism.txt  character.txt  covenant.txt  crucible.txt  dard-e-eshqi.md  divine-worlds.txt  drafts.md  eyes-are-blind.md  finely-tuned.txt  haiku.md  haiku.txt  here-and-there.md  injustice.txt  instrument.txt  knives.txt  knowledge.md  metal.md  minds-cannot-know.md  musk.eml  neisan.txt  noah.eml  notes.md  ocean.txt  poem.txt  prayers.txt  quora.md  quran.md  rails.md  rain.md  reddit-old.org  reddit-raw.txt  reddit.md  science.txt  self-shell.md  self-shell.txt  self.txt  (+9 more)
org/: 199201011200-flight-of-the-archaeopteryx.org  199601011200-artistic-endeavor.org  199601011200-bantering-in-spanish.org  199601011200-brief-thoughts.org  199601011200-casting-spells.org  199601011200-conceptions-of-faith.org  199601011200-creation-from-nothingness.org  199601011200-economy-of-force.org  199601011200-emotional-memory.org  199601011200-flight.org  199601011200-gain-and-loss.org  199601011200-genuine-certitude.org  199601011200-hexadecimal-alphabet-for-code.org  199601011200-human-relationships.org  199601011200-judging-life.org  199601011200-levels-of-awareness.org  199601011200-life-is-without-sorrow.org  199601011200-mistakes.org  199601011200-moonlight.org  199601011200-revealing-god.org  (+997 more)
(+1043 files in other folders)
