name:                convert
version:             0.1.0.0
synopsis:            WordPress to Hakyll converter
license:             MIT
license-file:        LICENSE
author:              John Wiegley
maintainer:          johnw@newartisans.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable convert
  main-is:             Convert.hs
  build-depends:       base >=4.8 && <4.9, ghc-prim
    , xml-lens
    , lens
    , xml-conduit
    , bytestring
    , text
    , containers
    , zippers
  default-language:    Haskell2010